--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -1,350 +1,362 @@
 body {
-    transition: all 0.375s;
-    font-family: 'Chelsea Market', cursive;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #B6D8D0;
-    /* background-image: url(../assets/grille2.png); */
+	transition: all 0.375s;
+	font-family: 'Chelsea Market', cursive;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: #B6D8D0;/* background-image: url(../assets/grille2.png); */
 }
-
 input {
-    font-family: 'Chelsea Market', cursive;
+	font-family: 'Chelsea Market', cursive;
 }
-
-
 /* Container styles */
 
 .main {
-    width: 100%;
-    height: 100%;
-    padding: 24px;
-    display: flex;
-    flex-direction: row;
-    font-size: 1.8em;
+	width: 100%;
+	height: 100%;
+	padding: 24px;
+	display: flex;
+	flex-direction: row;
+	font-size: 1.8em;
 }
-
-
 /* Text styles*/
 
 .green {
-    color: #8dc740
+	color: #8dc740
 }
-
 .green2 {
-    color: #5AA373;
+	color: #5AA373;
 }
-
 .gray {
-    color: #676767;
+	color: #676767;
 }
-
 .purple {
-    color: #67296B;
+	color: #67296B;
 }
-
 .blue {
-    color: #214A65;
+	color: #214A65;
 }
-
 .blue2 {
-    color: #161CAE;
+	color: #161CAE;
 }
-
 .blue3 {
-    color: darkturquoise;
+	color: darkturquoise;
 }
-
 .orange {
-    color: #AB4021;
+	color: #AB4021;
 }
-
 .red {
-    color: #AA223F;
+	color: #AA223F;
 }
-
 .left {
-    display: flex;
-    flex-direction: column;
-    width: 536px;
+	display: flex;
+	flex-direction: column;
+	width: 536px;
 }
-
 .right {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: space-between;
-    flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	justify-content: space-between;
+	flex: 1;
 }
-
 .left header.title {
-    font-size: 3em;
-    color: #367E8B;
-    text-align: left;
-    margin-bottom: 66px;
+	font-size: 3em;
+	color: #367E8B;
+	text-align: left;
+	margin-bottom: 66px;
 }
-
 .left header.title.index {
-    font-size: 5em;
-    margin-bottom: 0;
-    margin-top: -10px;
+	font-size: 5em;
+	margin-bottom: 0;
+	margin-top: -10px;
 }
-
 .left header.title.bravo {
-    font-size: 5em;
-    text-align: left;
-    color: #0B4215;
+	font-size: 5em;
+	text-align: left;
+	color: #0B4215;
 }
-
 .left header.title.tight {
-    font-size: 2.8em;
-    line-height: 1.7em;
+	font-size: 2.8em;
+	line-height: 1.7em;
 }
-
 .left .description {
-    color: #791D1E;
-    text-align: left;
+	hyphens: none;
+	color: #791D1E;
+	text-align: left;
 }
-
 .right .nav {
-    display: inline;
-    padding: 0 0.5em;
-    list-style-type: none;
-    font-size: 0.6em;
+	display: inline;
+	padding: 0 0.5em;
+	list-style-type: none;
+	font-size: 0.6em;
 }
-
-
 /* Je sélectionne les <li> du menu horizontal */
 
 .right .nav ul#menu_horizontal li {
-    display: inline;
-    padding: 0 0.5em;
-    /* Pour espacer les boutons entre eux */
+	display: inline;
+	padding: 0 0.5em;/* Pour espacer les boutons entre eux */
 }
-
 .right .nav ul#menu_horizontal li a {
-    color: #AB4021;
-    text-decoration: none;
+	color: #AB4021;
+	text-decoration: none;
 }
-
 .right .nav ul#menu_horizontal {
-    list-style-type: none;
-    /* Car sinon les puces se placent n'importe où */
+	list-style-type: none;/* Car sinon les puces se placent n'importe où */
 }
-
 .right .suite {
-    margin-right: 12px;
-    transition: all 0.3s;
-    font-size: 1em;
-    color: #AB4021;
-    text-decoration: none;
+	position: fixed;
+	bottom: 8px;
+	right: 8px;
+	transition: all 0.3s;
+	font-size: 1em;
+	color: #AB4021;
+	text-decoration: none;
 }
-
 .right .suite:hover {
-    font-size: 1.4em;
+	font-size: 1.4em;
 }
-
 .right .data {
-    border-left: solid 1px #367e8b;
-    align-self: flex-start;
-    padding-left: 60px;
-    flex: 1;
-    margin: 160px 0;
+	border-left: solid 1px #367e8b;
+	align-self: flex-start;
+	padding-left: 60px;
+	flex: 1;
+	margin: 160px 0;
 }
-
 .indent-1 {
-    margin-left: 44px;
+	margin-left: 44px;
 }
-
 .indent-2 {
-    margin-left: 88px;
+	margin-left: 88px;
 }
-
 .coucou {
-    margin-top: 24px;
-    font-size: 2.5em;
-    color: #CDC05B;
-    padding: 0px 12px;
-    text-align: center;
+	margin-top: 24px;
+	font-size: 2.5em;
+	color: #CDC05B;
+	padding: 0px 12px;
+	text-align: center;
 }
-
 #prenom-affichage {
-    font-size: 0.8em;
-    color: #0B4215;
+	font-size: 0.8em;
+	color: #0B4215;
 }
-
 .input {
-    text-align: center;
+	text-align: center;
 }
-
 .tuC {
-    font-size: 2em;
-    color: #7D0B0D;
-    margin-top: 25%;
+	font-size: 2em;
+	color: #7D0B0D;
+	margin-top: 25%;
 }
-
 img.cocody-bravo {
-    max-width: 600px;
-    align-self: center;
-    animation-duration: 1.5s;
+	max-width: 600px;
+	align-self: center;
+	animation-duration: 1.5s;
+}
+img.cocody-index {
+	max-width: 600px;
+	align-self: center;
+	animation-duration: 2s;
+}
+img.cocody-coucou{
+	max-width: 300px;
+	align-self:center;
+	animation-duration: 2s;
+}
+img.cocody-coucou1{
+	max-width: 200px;
+	align-self:center;
+	animation-duration: 2s;
+}
+img.cocody-def {
+	max-width: 550px;
+	align-self: center;
+	animation-duration:2s;
+}
+img.cocody-def2 {
+	max-width: 550px;
+	align-self: center;
+	animation-duration:5s;
+}
+img.cocody-def3 {
+	max-width: 250px;
+	align-self: center;
+	animation-duration:5s;
+}
+img.cocody-def4 {
+	max-width: 550px;
+	align-self: center;
+	animation-duration:8s;
 }
 
+img.cocody-def5 {
+	max-width: 700px;
+	align-self: center;
+	animation-duration:10s;
+}
+
+img.cocody-exercice {
+	max-width: 200px;
+	align-self: center;
+	animation-duration:1s;
+}
+img.cocody-exercice2 {
+	max-width: 250px;
+	align-self:center;
+	animation-duration:1s;
+}
+img.cocody-exercice3 {
+	max-width: 250px;
+	align-self:center;
+	animation-duration:2s;
+}
+img.cocody-exercice5 {
+	max-width: 250px;
+	align-self:center;
+	animation-duration:0.5s;
+}
 #potes-info, #salutations-info {
-    margin-top: 48px;
-    color: #367E8B;
+	margin-top: 48px;
+	color: #367E8B;
 }
-
 .instruction {
-    font-size: 1em;
-    color: #000000;
-    text-align: left;
+	hyphens: none;
+	font-size: 1em;
+	color: #000000;
+	text-align: left;
 }
-
 input {
-    background-color: #B6D8D0;
-    color: #5AA373;
-    font-family: 'Chelsea Market';
-    font-size: 30px;
-    border: 4px solid #5AA373;
+	background-color: #B6D8D0;
+	color: #5AA373;
+	font-family: 'Chelsea Market';
+	font-size: 30px;
+	border: 4px solid #5AA373;
 }
-
 .code {
-    font-family: 'Bellefair', serif;
-    font-size: 1.2em;
+	font-family: 'Bellefair', serif;
+	font-size: 1.2em;
 }
-
 #total {
-    color: #0B4215;
-    font-size: 2em;
-    min-height: 56px;
+	color: #0B4215;
+	font-size: 2em;
+	min-height: 56px;
 }
-
 .listeLiens:hover {
-    font-size: 140%;
+	font-size: 140%;
 }
-
 .listeLiens2:hover {
-    font-size: 140%;
+	font-size: 140%;
 }
-
 .listeLiens3:hover {
-    font-size: 140%;
+	font-size: 140%;
 }
-
 .listeLiens4:hover {
-    font-size: 140%;
+	font-size: 140%;
 }
-
 .listeLiens5:hover {
-    font-size: 140%;
+	font-size: 140%;
 }
-
 .listeLiens {
-    text-decoration: none;
-    font-size: 1em;
-    color: #AB4021;
-    text-align: center;
-    position: absolute;
-    left: 940px;
-    top: 50px;
+	text-decoration: none;
+	font-size: 1em;
+	color: #AB4021;
+	text-align: center;
+	position: absolute;
+	left: 940px;
+	top: 50px;
 }
-
 .listeLiens2 {
-    text-decoration: none;
-    font-size: 1em;
-    color: #AB4021;
-    text-align: center;
-    position: absolute;
-    left: 940px;
-    top: 100px;
+	text-decoration: none;
+	font-size: 1em;
+	color: #AB4021;
+	text-align: center;
+	position: absolute;
+	left: 940px;
+	top: 100px;
 }
-
 .listeLiens3 {
-    text-decoration: none;
-    font-size: 1em;
-    color: #AB4021;
-    text-align: center;
-    position: absolute;
-    left: 940px;
-    top: 150px;
+	text-decoration: none;
+	font-size: 1em;
+	color: #AB4021;
+	text-align: center;
+	position: absolute;
+	left: 940px;
+	top: 150px;
 }
-
 .listeLiens4 {
-    text-decoration: none;
-    font-size: 1em;
-    color: #AB4021;
-    text-align: center;
-    position: absolute;
-    left: 940px;
-    top: 200px;
+	text-decoration: none;
+	font-size: 1em;
+	color: #AB4021;
+	text-align: center;
+	position: absolute;
+	left: 940px;
+	top: 200px;
 }
-
 .listeLiens5 {
-    text-decoration: none;
-    font-size: 1em;
-    color: #AB4021;
-    text-align: center;
-    position: absolute;
-    left: 940px;
-    top: 250px;
+	text-decoration: none;
+	font-size: 1em;
+	color: #AB4021;
+	text-align: center;
+	position: absolute;
+	left: 940px;
+	top: 250px;
 }
-
 .nomTheme {
-    font-size: 1em;
-    color: #367E8B;
-    text-align: left;
-    position: absolute;
-    left: 100px;
-    top: 20px;
+	font-size: 1em;
+	color: #367E8B;
+	text-align: left;
+	position: absolute;
+	left: 100px;
+	top: 20px;
 }
-
 table {
-    position: absolute;
-    text-align: center;
-    left: 650px;
-    top: 200px;
+	position: absolute;
+	text-align: center;
+	left: 650px;
+	top: 200px;
 }
-
 .amis {
-    position: absolute;
-    text-align: left;
-    left: 650px;
-    top: 350px;
+	position: absolute;
+	text-align: left;
+	left: 650px;
+	top: 350px;
 }
-
-
 /* Variables schema */
 
 .variable-schema>* {
-    font-family: 'Bellefair', serif;
-    font-size: 1.2em;
+	font-family: 'Bellefair', serif;
+	font-size: 1.2em;
+}
+.variable-objet{
+	font-family: 'Bellefair', serif;
+	font-size: 0.8em;
 }
 
 @media screen and (max-width: 640px) {
-    body {
-        font-size: 1.2em;
-    }
-    .left header.title {
-        margin-top: 24px;
-        font-size: 2em;
-        margin-bottom: 12px;
-    }
-    .main {
-        flex-direction: column;
-    }
-    .left {
-        width: auto;
-    }
-    .right .data {
-        border-top: solid 1px #367e8b;
-        margin: 48px 0;
-        padding-top: 48px;
-        border-left: none;
-    }
-    .right .nav {
-        position: fixed;
-        top: 0;
-        background: #b6d8d0;
-    }
+body {
+	font-size: 1.2em;
+}
+.left header.title {
+	margin-top: 24px;
+	font-size: 2em;
+	margin-bottom: 12px;
+}
+.main {
+	flex-direction: column;
+}
+.left {
+	width: auto;
+}
+.right .data {
+	border-top: solid 1px #367e8b;
+	margin: 48px 0;
+	padding-top: 48px;
+	border-left: none;
+}
+.right .nav {
+	position: fixed;
+	top: 0;
+	background: #b6d8d0;
+}
 }
